<resources>
    <string name="app_name">VATCalculation</string>
    <string name="shared_preferences_vat_key">vat_share_preferences</string>

    <!-- RadioButtons -->
    <string name="radio_button_add_vat">Add VAT</string>
    <string name="radio_button_reduce_vat">Reduce VAT</string>

    <!-- Information Card -->
    <string name="text_sum_without_vat">Amount without VAT</string>
    <string name="text_sum_with_vat">Amount including VAT</string>
    <string name="text_vat">percent VAT</string>
    <string name="text_no_number">--</string>
    <string name="max_number_message">Reached maximum digits</string>

    <!-- Calculator Buttons -->
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="dot">.</string>
    <string name="image_delete_content_description">delete image</string>

    <!-- Menu Items -->
    <string name="menu_item_vat_update">Update VAT</string>

    <!-- Dialog VAT Update -->
    <string name="dialog_vat_headline">VAT Update</string>
    <string name="vat_update_message">VAT updated to </string>
    <string name="precentege_sign">%</string>
    <string name="dialog_vat_confirm_button">confirm</string>
    <string name="delete_vat_input">delete vat input</string>
    <string name="enter_vat_hint">Enter new VAT</string>
    <string name="current_vat_text">Current VAT percentage is</string>
    <string name="invalid_vat_number_text">Enter valid number</string>

    <!-- Dialog Version Update -->
    <string name="dialog_version_update_message">Dear users,\n The app was updated to make your experience with it better. We changed It\'s looks and interaction, hopefully for the better.\n\n Thank you for using it!</string>
    <string name="dialog_version_update_headline">Version Update</string>
    <string name="dialog_version_update_button_close">got it</string>
    <string name="dialog_version_update_button_to_store">write for us</string>
</resources>
