<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="@dimen/dialog_vat_headline_padding"
            android:text="@string/dialog_version_update_headline"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dialog_vat_headline_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dialog_version_update_message_horizontal_margin"
            android:layout_marginStart="@dimen/dialog_version_update_message_horizontal_margin"
            android:layout_marginTop="@dimen/dialog_version_update_message_top_margin"
            android:text="@string/dialog_version_update_message"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/btn_close"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dialog_version_update_button_right_margin"
            android:text="@string/dialog_version_update_button_close"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btn_to_store"
            app:layout_constraintEnd_toStartOf="@+id/btn_to_store"
            app:layout_constraintTop_toTopOf="@+id/btn_to_store" />

        <Button
            android:id="@+id/btn_to_store"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_vat_button_top_margin"
            android:text="@string/dialog_version_update_button_to_store"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_message" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>