<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_radio_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/cardview_horizontal_margin"
                android:layout_marginStart="@dimen/cardview_horizontal_margin"
                android:layout_marginTop="@dimen/cardview_vertical_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_add_vat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:checked="true"
                        android:onClick="vatClick"
                        android:text="@string/radio_button_add_vat" />

                    <RadioButton
                        android:id="@+id/rb_subtract_vat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:onClick="vatClick"
                        android:text="@string/radio_button_reduce_vat" />
                </RadioGroup>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/cardview_horizontal_margin"
                android:layout_marginStart="@dimen/cardview_horizontal_margin"
                android:layout_marginTop="@dimen/cardview_vertical_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_radio_buttons">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_input_amount_headline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/information_text_top_margin"
                        android:gravity="center"
                        android:text="@string/text_sum_without_vat"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/tv_before_calc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/information_text_top_margin"
                        android:gravity="center"
                        android:text="@string/text_no_number"
                        android:textSize="@dimen/information_numbers_text_size" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/information_divider_height"
                        android:layout_marginEnd="@dimen/information_divider_horizontal_margin"
                        android:layout_marginStart="@dimen/information_divider_horizontal_margin"
                        android:layout_marginTop="@dimen/information_divider_top_margin"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:id="@+id/tv_vat_headline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/information_text_top_margin"
                        android:gravity="center"
                        android:text="@string/text_vat"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/tv_vat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/information_text_top_margin"
                        android:gravity="center"
                        android:text="@string/text_no_number"
                        android:textSize="@dimen/information_numbers_text_size" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/information_divider_height"
                        android:layout_marginEnd="@dimen/information_divider_horizontal_margin"
                        android:layout_marginStart="@dimen/information_divider_horizontal_margin"
                        android:layout_marginTop="@dimen/information_divider_top_margin"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:id="@+id/tv_calculated_amount_headline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/information_text_top_margin"
                        android:gravity="center"
                        android:text="@string/text_sum_with_vat"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/tv_after_calc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/information_bottom_text_bottom_margin"
                        android:layout_marginTop="@dimen/information_text_top_margin"
                        android:gravity="center"
                        android:text="@string/text_no_number"
                        android:textSize="@dimen/information_numbers_text_size" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_calculator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/cardview_horizontal_margin"
                android:layout_marginStart="@dimen/cardview_horizontal_margin"
                android:layout_marginTop="@dimen/cardview_vertical_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_information">

                <android.support.v7.widget.GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_marginStart="8dp"
                    app:columnCount="3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:rowCount="4">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/calculator_button_margin"
                        android:background="@drawable/selector_calculator_button"
                        android:onClick="calculatorClick"
                        android:text="@string/button_1"
                        android:textColor="@color/selector_calculaotr_button_text"
                        android:textSize="@dimen/calculator_button_text_size"
                        android:textStyle="bold"
                        app:layout_column="@integer/one_column"
                        app:layout_row="@integer/one_row" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/calculator_button_margin"
                        android:background="@drawable/selector_calculator_button"
                        android:onClick="calculatorClick"
                        android:text="@string/button_2"
                        android:textColor="@color/selector_calculaotr_button_text"
                        android:textSize="@dimen/calculator_button_text_size"
                        android:textStyle="bold"
                        app:layout_column="@integer/two_column"
                        app:layout_row="@integer/two_row" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/calculator_button_margin"
                        android:background="@drawable/selector_calculator_button"
                        android:onClick="calculatorClick"
                        android:text="@string/button_3"
                        android:textColor="@color/selector_calculaotr_button_text"
                        android:textSize="@dimen/calculator_button_text_size"
                        android:textStyle="bold"
                        app:layout_column="@integer/three_column"
                        app:layout_row="@integer/three_row" />


                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/calculator_button_margin"
                        android:background="@drawable/selector_calculator_button"
                        android:onClick="calculatorClick"
                        android:text="@string/button_4"
                        android:textColor="@color/selector_calculaotr_button_text"
                        android:textSize="@dimen/calculator_button_text_size"
                        android:textStyle="bold"
                        app:layout_column="@integer/four_column"
                        app:layout_row="@integer/four_row" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/calculator_button_margin"
                        android:background="@drawable/selector_calculator_button"
                        android:onClick="calculatorClick"
                        android:text="@string/button_5"
                        android:textColor="@color/selector_calculaotr_button_text"
                        android:textSize="@dimen/calculator_button_text_size"
                        android:textStyle="bold"
                        app:layout_column="@integer/five_column"
                        app:layout_row="@integer/five_row" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/calculator_button_margin"
                        android:background="@drawable/selector_calculator_button"
                        android:onClick="calculatorClick"
                        android:text="@string/button_6"
                        android:textColor="@color/selector_calculaotr_button_text"
                        android:textSize="@dimen/calculator_button_text_size"
                        android:textStyle="bold"
                        app:layout_column="@integer/six_column"
                        app:layout_row="@integer/six_row" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/calculator_button_margin"
                        android:background="@drawable/selector_calculator_button"
                        android:onClick="calculatorClick"
                        android:text="@string/button_7"
                        android:textColor="@color/selector_calculaotr_button_text"
                        android:textSize="@dimen/calculator_button_text_size"
                        android:textStyle="bold"
                        app:layout_column="@integer/seven_column"
                        app:layout_row="@integer/seven_row" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/calculator_button_margin"
                        android:background="@drawable/selector_calculator_button"
                        android:onClick="calculatorClick"
                        android:text="@string/button_8"
                        android:textColor="@color/selector_calculaotr_button_text"
                        android:textSize="@dimen/calculator_button_text_size"
                        android:textStyle="bold"
                        app:layout_column="@integer/eight_column"
                        app:layout_row="@integer/eight_row" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/calculator_button_margin"
                        android:background="@drawable/selector_calculator_button"
                        android:onClick="calculatorClick"
                        android:text="@string/button_9"
                        android:textColor="@color/selector_calculaotr_button_text"
                        android:textSize="@dimen/calculator_button_text_size"
                        android:textStyle="bold"
                        app:layout_column="@integer/nine_column"
                        app:layout_row="@integer/nine_row" />

                    <FrameLayout
                        android:id="@+id/btn_calc_delete"
                        style="@style/Widget.AppCompat.Button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/calculator_button_margin"
                        android:background="@drawable/selector_calculator_button"
                        android:longClickable="true"
                        android:onClick="calculatorClick"
                        android:textColor="@color/selector_calculaotr_button_text"
                        android:textStyle="bold"
                        app:layout_column="@integer/delete_column"
                        app:layout_row="@integer/delete_row">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:contentDescription="@string/image_delete_content_description"
                            android:src="@drawable/selector_calculator_button_delete" />

                    </FrameLayout>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/calculator_button_margin"
                        android:background="@drawable/selector_calculator_button"
                        android:onClick="calculatorClick"
                        android:text="@string/button_0"
                        android:textColor="@color/selector_calculaotr_button_text"
                        android:textSize="@dimen/calculator_button_text_size"
                        android:textStyle="bold"
                        app:layout_column="@integer/zero_column"
                        app:layout_row="@integer/zero_row" />

                    <Button
                        android:id="@+id/btn_calc_dot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/calculator_button_margin"
                        android:background="@drawable/selector_calculator_button"
                        android:onClick="calculatorClick"
                        android:text="@string/dot"
                        android:textColor="@color/selector_calculaotr_button_text"
                        android:textSize="@dimen/calculator_button_text_size"
                        android:textStyle="bold"
                        app:layout_column="@integer/dot_column"
                        app:layout_row="@integer/dot_row" />


                </android.support.v7.widget.GridLayout>

            </android.support.v7.widget.CardView>

        </android.support.constraint.ConstraintLayout>
    </FrameLayout>
</ScrollView>